# Waybar

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE  LLM Handoff Summary.md  Makefile  PR_WORKFLOW_DESCRIPTION.md  README.md  SHARED_EXEC_PROPOSAL.md  asan.supp  default.nix  ext4fuse.rb  flake.nix  heaptrack.waybar.2711357.zst  hyprland-workspace-icons.md  meson.build  meson_options.txt  prayer_timer.patch  result  sample-config.md  tsan.supp  waybar-backlight.5.scd  waybar-battery.5.scd  waybar-clock.5.scd  waybar.5.scd
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/wiki/: README.md  generate.py  mapping.json
.github/workflows/: clang-format.yml  clang-tidy.yml  clang-tidy.yml.bak  docker.yml  freebsd.yml  labeler.yml  lint.yml  linux.yml  nix-tests.yml  nix-update-flake-lock.yml  smoke.yml  wiki.yml
Dockerfiles/: alpine  archlinux  debian  fedora  gentoo  opensuse
cabi_example/: main.c  meson.build
config/: config  style.css
doc/: modules.md
include/: AAppIconLabel.hpp  AButton.hpp  AGraph.hpp  AIconLabel.hpp  ALabel.hpp  AModule.hpp  ASlider.hpp  IModule.hpp  bar.hpp  client.hpp  config.hpp  factory.hpp  group.hpp
include/interfaces/: IDBus.hpp  IModule.hpp  IWidget.hpp
include/ipc/: client.hpp
include/modules/: DBusClient.hpp  backlight.hpp  backlight_slider.hpp  battery.hpp  bluetooth.hpp  cabi.hpp  cava.hpp  cffi.hpp  clock.hpp  config.hpp  cpu.hpp  cpu_frequency.hpp  cpu_graph.hpp  cpu_usage.hpp  custom.hpp  custom_exec_worker.hpp  custom_graph.hpp  custom_list.hpp  disk.hpp  gamemode.hpp  gamma_control.hpp  gammastep.hpp  gps.hpp  idle_inhibitor.hpp  image.hpp  images.hpp  inhibitor.hpp  jack.hpp  kbdlayout.hpp  keyboard_state.hpp  light.hpp  load.hpp  memory.hpp  mpd.hpp  mpris.hpp  network.hpp  nvidia_monitor.hpp  power_profiles_daemon.hpp  prayer_timer.hpp  pulseaudio.hpp  (+14 more)
include/services/: DBusService.hpp  cava.hpp  clock.hpp
include/util/: SafeSignal.hpp  algorithm.hpp  audio_backend.hpp  backend_common.hpp  backlight_backend.hpp  chrono.hpp  clara.hpp  command.hpp  command_line_stream.hpp  condshow.hpp  css_reload_helper.hpp  date.hpp  enum.hpp  format.hpp  geoclue_backend.hpp  gtk_icon.hpp  hex_checker.hpp  hosts_check.hpp  icon_loader.hpp  json.hpp  kill_signal.hpp  lazy_fmt.hpp  portal.hpp  prepare_for_sleep.h  ptr_vec.hpp  regex_collection.hpp  rewrite_string.hpp  rewrite_title.hpp  rfkill.hpp  sanitize_str.hpp  scope_guard.hpp  scoped_fd.hpp  sleeper_thread.hpp  string.hpp  udev_deleter.hpp  unix_signal.hpp  upower_backend.hpp  ustring_clen.hpp  utf8_string.hpp  waybar_time.hpp  (+1 more)
man/: wabar-backlight-slider.5.scd  wabar-backlight.5.scd  wabar-battery.5.scd  wabar-bluetooth.5.scd  wabar-cava.5.scd  wabar-cffi.5.scd  wabar-clock.5.scd  wabar-cpu.5.scd  wabar-custom.5.scd  wabar-disk.5.scd  wabar-dwl-tags.5.scd  wabar-dwl-window.5.scd  wabar-gamemode.5.scd  wabar-hyprland-language.5.scd  wabar-hyprland-submap.5.scd  wabar-hyprland-window.5.scd  wabar-hyprland-workspaces.5.scd  wabar-idle-inhibitor.5.scd  wabar-image.5.scd  wabar-inhibitor.5.scd  wabar-jack.5.scd  wabar-keyboard-state.5.scd  wabar-memory.5.scd  wabar-mpd.5.scd  wabar-mpris.5.scd  wabar-network.5.scd  wabar-power-profiles-daemon.5.scd  wabar-privacy.5.scd  wabar-pulseaudio-slider.5.scd  wabar-pulseaudio.5.scd  wabar-river-layout.5.scd  wabar-river-mode.5.scd  wabar-river-tags.5.scd  wabar-river-window.5.scd  wabar-sndio.5.scd  wabar-states.5.scd  wabar-sway-language.5.scd  wabar-sway-mode.5.scd  wabar-sway-scratchpad.5.scd  wabar-sway-window.5.scd  (+90 more)
nix/: default.nix
protocol/: cosmic-workspace-unstable-v1.xml  dbus-status-notifier-item.xml  dbus-status-notifier-watcher.xml  dwl-bar-ipc-unstable-v1.xml  dwl-ipc-unstable-v2.xml  ext-idle-notify-v1.xml  meson.build  river-control-unstable-v1.xml  river-status-unstable-v1.xml  wlr-foreign-toplevel-management-unstable-v1.xml  wlr-layer-shell-unstable-v1.xml  wlr-workspace-unstable-v1.xml
resources/: config  config.jsonc  mediaplayer.sh  style.css  wabar.service.in  waybar.service  waybar.service.in
resources/custom_modules/: mediaplayer.py  power_menu.xml
resources/icons/: meson.build  wabar_icons.gresource.xml  waybar_icons.gresource.xml
resources/ui/: ui-power.xml
src/: AAppIconLabel.cpp  AButton.cpp  AGraph.cpp  AIconLabel.cpp  ALabel.cpp  AModule.cpp  ASlider.cpp  bar.cpp  client.cpp  config.cpp  factory.cpp  globals.cpp  group.cpp  main.cpp
src/ipc/: client.cpp
src/modules/: DBusClient.cpp  backlight.cpp  backlight_slider.cpp  battery.cpp  bluetooth.cpp  cabi.cpp  cava.cpp  cffi.cpp  clock.cpp  config.cpp  cpu.cpp  cpu_graph.cpp  custom.cpp  custom_exec_worker.cpp  custom_graph.cpp  custom_list.cpp  disk.cpp  gamemode.cpp  (+34 more)
subprojects/: catch2.wrap  cava.wrap  date.wrap  fmt.wrap  fmtlib.wrap  gtk-layer-shell.wrap  gtk4-layer-shell.wrap  jsoncpp.wrap  libcava.wrap  spdlog.wrap  utfcpp.wrap
test/: GlibTestsFixture.hpp  JsonParser.cpp  SafeSignal.cpp  config.cpp  css_reload_helper.cpp  date.cpp  main.cpp  meson.build  sleeper_thread.cpp  waybar_time.cpp
test/config/: hyprland-workspaces.json  include-1.json  include-2.json  include-multi-0.json  include-multi-1.json  include-multi-2.json  include-multi-3-0.json  include-multi-3.json  include-multi.json  include-relative-path.json  include-wildcard.json  include.json  multi.json  simple.json
test/config/modules/: cpu.jsonc  memory.jsonc
test/fixtures/: GlibTestsFixture.hpp
test/hyprland/: backend.cpp  meson.build
test/hyprland/fixtures/: IPCTestFixture.hpp
test/smoke/: README.md  a11y.py  a11y.sh  config.jsonc  coverage.sh  fuzz.sh  hardware.sh  interact.sh  leakcheck.sh  lib.sh  lifecycle.sh  modules-config.jsonc  modules.sh  positions.sh  run.sh  state.sh  style.css
test/utils/: JsonParser.cpp  SafeSignal.cpp  command.cpp  command_line_stream.cpp  css_reload_helper.cpp  date.cpp  format.cpp  meson.build  sleeper_thread.cpp
test/utils/fixtures/: GlibTestsFixture.hpp
(+308 files in other folders)
